Uradjene obe sekcije

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class='container'>
             <div class='logo'><span class='logo-color'>Mega</span>Rent</div>
             <ul>
-                
+
                 <li><a href='#'>Home</a></li>
                 <li><a href='#'>About Us</a></li>
                 <li><a href='#'>Location</a></li>
@@ -28,10 +28,78 @@
         <div class='headline container'>
             <h1>Welcome to MegaRent</h1>
             <p>Your best online rent-a-car</p>
-            
+
         </div>
     </header>
+    <section class="catalog">
+        <div class='content container'>
+            <h3>Selection from our catalog</h3>
+            <figure>
+                <img src='slike/car_civil.png' alt='Civil vehicles' />
+                <figcaption>Civil vehicles</figcaption>
+                <a href='#' class='offer'>View offers</a>
+            </figure>
+            <figure>
+                <img src='slike/car_sport.png' alt='Civil vehicles' />
+                <figcaption>Sport cars</figcaption>
+                <a href='#' class='offer'>View offers</a>
+            </figure>
+            <figure>
+                <img src='slike/car_suv.png' alt='Civil vehicles' />
+                <figcaption>SUV's</figcaption>
+                <a href='#' class='offer'>View offers</a>
+            </figure>
+            <figure>
+                <img src='slike/car_van.png' alt='Civil vehicles' />
+                <figcaption>Transport vehicles</figcaption>
+                <a href='#' class='offer'>View offers</a>
+            </figure>
+        </div>
 
+    </section>
+    <section class="pricing">
+        <div class='content container'>
+            <h3>Pricing</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Car Type</th>
+                        <th>Day</th>
+                        <th>Week</th>
+                        <th>Month</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Civil</td>
+                        <td>20 &euro;</td>
+                        <td>100 &euro;</td>
+                        <td>350 &euro;</td>
+                    </tr>
+                    <tr>
+                        <td>Transport</td>
+                        <td>35 &euro;</td>
+                        <td>150 &euro;</td>
+                        <td>500 &euro;</td>
+                    </tr>
+                    <tr>
+                        <td>Sport</td>
+                        <td>50 &euro;</td>
+                        <td>300 &euro;</td>
+                        <td>900 &euro;</td>
+                    </tr>
+                    <tr>
+                        <td>SUV</td>
+                        <td>50 &euro;</td>
+                        <td>350 &euro;</td>
+                        <td>1000 &euro;</td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </div>
+
+    </section>
 
 
 </body>
