--- a/index.html
+++ b/index.html
@@ -100,7 +100,19 @@
         </div>
 
     </section>
-
+<footer>
+    <div class='container'>
+        <div class='footer-logo'>
+            <span class='logo-color'>Mega</span>Rent
+        </div>
+        <address>
+            North Road 16b </br>
+            East London </br>
+            United Kingdom </br>
+        </address>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d11233.78267823416!2d19.809286549999996!3d45.2590011!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2srs!4v1507483512996" width="350" height="280" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+</footer>
 
 </body>
 
