--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href='https://fonts.googleapis.com/css?family=Raleway:700' rel='stylesheet' type='text/css'>
 
     <title></title>
@@ -13,7 +14,7 @@
 
 <body>
     <header>
-        <nav class='container'>
+        <nav>
             <div class='logo'><span class='logo-color'>Mega</span>Rent</div>
             <ul>
 
@@ -25,14 +26,14 @@
             </ul>
 
         </nav>
-        <div class='headline container'>
+        <div class='headline'>
             <h1>Welcome to MegaRent</h1>
             <p>Your best online rent-a-car</p>
 
         </div>
     </header>
     <section class="catalog">
-        <div class='content container'>
+        <div class='content'>
             <h3>Selection from our catalog</h3>
             <figure>
                 <img src='slike/car_civil.png' alt='Civil vehicles' />
@@ -58,8 +59,11 @@
 
     </section>
     <section class="pricing">
-        <div class='content container'>
+        <div class='content'>
             <h3>Pricing</h3>
+            <div class='hidden'>
+                <a href='#'>View pricing</a>
+            </div>
             <table>
                 <thead>
                     <tr>
@@ -101,7 +105,7 @@
 
     </section>
 <footer>
-    <div class='container'>
+    <div>
         <div class='footer-logo'>
             <span class='logo-color'>Mega</span>Rent
         </div>
